[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemy/HelicopteroEnemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy/path/path1.tres" type="Curve2D" id=2]
[ext_resource path="res://scenes/enemy/AviaoGEnemy.gd" type="Script" id=3]
[ext_resource path="res://graphics/enemy/heli1.png" type="Texture" id=4]
[ext_resource path="res://graphics/enemy/heli2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "normal",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "EndPath1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 201.0, 201.0, 438.22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 84.0, -26.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "StartPath1"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 201.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 18.8044, 18.8044, 84.0 ]
}

[node name="HelicopteroEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )
score = 15
shootInterval = 1.5
shootSpeed = 60

[node name="Path2D" type="Path2D" parent="."]
curve = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 399.998, 0.000932127 )
rotation = -0.401211
offset = 438.22

[node name="HeliEnemy" type="KinematicBody2D" parent="Path2D/PathFollow2D"]
rotation = -1.46608
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Path2D/PathFollow2D/HeliEnemy"]
frames = SubResource( 1 )
animation = "normal"
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/PathFollow2D/HeliEnemy"]
visible = false
polygon = PoolVector2Array( 0.867882, 14.9336, -0.994995, 15.0146, -2.85788, 12.7467, -3.82981, 9.02098, -4.0728, 6.10517, -7.87955, 6.18616, -7.87955, 3.02737, -3.9108, 2.94637, -3.9108, -0.131424, -2.93887, -0.21242, -3.01986, -3.69519, -2.04793, -3.77619, -1.80494, -6.85399, -1.15699, -6.692, -0.994995, -10.8227, -4.0728, -10.8227, -3.82981, -13.0096, -1.07599, -12.9286, -0.994995, -15.0345, 1.19186, -15.1154, 1.11087, -13.0096, 4.10767, -12.9286, 4.02668, -11.0657, 1.02987, -10.9037, 1.11087, -7.09697, 2.1638, -7.01597, 2.0828, -3.85718, 3.05474, -3.85718, 3.05474, -0.0504303, 4.10767, 0.0305653, 4.18867, 3.02737, 7.75243, 3.10836, 7.75243, 5.94318, 4.10767, 6.18616, 4.02668, 9.50695, 3.21673, 13.1517 )

[node name="Position2D" type="Position2D" parent="Path2D/PathFollow2D/HeliEnemy"]
position = Vector2( 0, 17 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Path2D/PathFollow2D/HeliEnemy"]
position = Vector2( -0.244171, 0.0610437 )
scale = Vector2( 0.81687, 1.45782 )

[node name="Timer" type="Timer" parent="Path2D/PathFollow2D/HeliEnemy"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D"]
anims/EndPath1 = SubResource( 2 )
anims/StartPath1 = SubResource( 3 )

[node name="GlobalTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="screen_exited" from="Path2D/PathFollow2D/HeliEnemy/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Path2D/PathFollow2D/HeliEnemy/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GlobalTimer" to="." method="_on_GlobalTimer_timeout"]
